--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: NPM_CONFIG_PRODUCTION
+        value: false
     autoDeploy: true
     disk:
       name: photography-disk
@@ -15,3 +17,4 @@ services:
     scaling:
       minInstances: 1
       maxInstances: 3
+    healthCheckPath: /
