--- a/vercel.json
+++ b/vercel.json
@@ -29,7 +29,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(jpg|jpeg|png|webp|avif|ico|svg))",
+      "source": "/(.*\\\\.(jpg|jpeg|png|webp|avif|ico|svg))",
       "headers": [
         {
           "key": "Cache-Control",
